Reuse an existing action to toggle sidebar visibility

BUG: 468317